# msocr

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.train  LICENSE  MODEL_UPDATE_2026-02-13.md  README.md  SWARM_PLAN.json  SWARM_PLAN.md  codeql-results.sarif  hello.py  pyproject.toml  semgrep-auto.json  semgrep-owasp.json  setup.sh
.swarm/: .plan-write-marker  checkpoints.json  context.md  curator-briefing.md  dark-matter.md  doc-manifest.json  events.jsonl  knowledge.jsonl  plan-ledger.jsonl  plan.json  plan.md  telemetry.jsonl
configs/: old_turkish_config.yaml
docs/: ANNOTATION.md  Instruction.md  README.md  codeql-scan.md  kraken-fragmentary-manuscripts.md  kraken-training-data-research.md  kraken-training-techniques-research.md  line-segmentation-strategy.md  multi-script-htr-research.md  runpod-gpu-research.md  runpod.md  semgrep-scan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
instruction/: Start-here.md  Summary-harness-update.md  agent.patristic.ocr.model.md  code_review.md  eval.md  summary.md
models/: README.md  syriac_ref.txt
msocr/: __init__.py  cli.py  language_registry.py  ocr_syriac_lexiconheader.py  old_turkish_training.py  pdf_generator.py
notebooks/: sogdian_training.py
output/: state_update.yaml
pipeline/: base_msocr_compatible.yaml  benchmark_evaluation.yaml  handwritten_htr_training.yaml  low_confidence_fallback.yaml  payne-smith_syriac_runpod_train.yaml  printed_ocr_training.yaml  runpod_train_reference.md
reports/: e57d259b-smoke__e57d259b-syriac-smoke__e57d259b_smoke.json  e57d259b-smoke__e57d259b-syriac-smoke__e57d259b_smoke.md
scripts/: enrich_page_polygons.py
skill/: engine_router.yaml  manual_review_gate.yaml  post_ocr_correction.yaml  script_mode_classifier.yaml  sogdian_config.yaml  (+1 more)
(+115 files in other folders)
