[project]
name = "msocr"
version = "0.21.0"
description = "Sogdian manuscript HTR using Kraken"
authors = [{name = "Ephrem Yuan", email = "areopagusworkshop@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "kraken>=7.0.2",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "jsonlines>=3.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "gradio>=4.44.0",
    "pypdfium2>=4.30.0",
    "runpod>=1.9.1",
    "paramiko>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
msocr = "msocr.cli:main"
